next 5 days forcast done

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
               <!-- next five day -->
                <article>
                   <h1 class="text-2xl font-bold mt-5 ml-3 md:text-4xl">Next 5 Days Forcast</h1>
-                  <article class="flex flex-col md:flex-row md:flex-wrap ">
+                  <article id="fivedays" class="flex flex-col md:flex-row md:flex-wrap ">
 
                      <section class="bg-lime-400 text-center mt-10 ml-14 mr-14 mb-8 shadow-inner md:shadow-2xl shadow-lime-400/50 rounded-lg leading-8 p-2 md:ml-14 md:p-10 md:leading-10 lg:m-4 lg:p-2 lg:leading-4">
                         <p class="text-xl font-semibold md:text-2xl md:mt-2">Date(2024-08-21)</p>
@@ -77,6 +77,6 @@
 
    </main>
    
-   <script src="index.js"></script>
+   <script type="module" src="index.js"></script>
 </body>
 </html>
