--- a/src/index.html
+++ b/src/index.html
@@ -29,12 +29,12 @@
       <!-- search with city or current location -->
       <article class="text-center mt-7 bg-gray-300 rounded-lg ml-8 mr-8 h-60 md:h-64 ">
          <p class="text-2xl mt-4 font-bold md:text-4xl">Enter the city Name</p>
-          <form class="flex flex-col" >
+          <form class="flex flex-col">
              <input type="search" id="cityname" class="m-4 rounded-lg p-2" placeholder="Eg, Nagpur , Pune , Banglore" name="search" id="search">
-             <button type="submit" onclick="getcityName()"  class=" bg-violet-600 font-bold text-white text-xl w-1/2 text-center rounded-md ml-20 p-2 md:ml-40 ">Search</button>
+             <button type="submit" id="btn"  class=" bg-violet-600 font-bold text-white text-xl w-1/2 text-center rounded-md ml-20 p-2 md:ml-40 ">Search</button>
           </form>
           <p>--------------- OR ---------------</p>
-            <button class="bg-stone-400 p-1 rounded-sm font-semibold mt-1 md:p-2">Use My Current Location</button>   
+            <button id="currentlocation" class="bg-stone-400 p-1 rounded-sm font-semibold mt-1 md:p-2">Use My Current Location</button>   
         </article>
          <article>
                 
