--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
       <!-- search with city or current location -->
       <article class="text-center mt-7 bg-gray-300 rounded-lg ml-8 mr-8 h-60 md:h-64 ">
          <p class="text-2xl mt-4 font-bold md:text-4xl">Enter the city Name</p>
-          <form class="flex flex-col">
+          <form id="cityform" class="flex flex-col">
              <input type="search" id="cityname" class="m-4 rounded-lg p-2" placeholder="Eg, Nagpur , Pune , Banglore" name="search" id="search">
              <button type="submit" id="btn"  class=" bg-violet-600 font-bold text-white text-xl w-1/2 text-center rounded-md ml-20 p-2 md:ml-40 ">Search</button>
           </form>
