--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,13 @@
       <article class="text-center mt-7 bg-gray-300 rounded-lg ml-8 mr-8 h-60 md:h-64 ">
          <p class="text-2xl mt-4 font-bold md:text-4xl">Enter the city Name</p>
           <form id="cityform" class="flex flex-col">
-             <input type="search" id="cityname" class="m-4 rounded-lg p-2" placeholder="Eg, Nagpur , Pune , Banglore" name="search" id="search">
-             <button type="submit" id="btn"  class=" bg-violet-600 font-bold text-white text-xl w-1/2 text-center rounded-md ml-20 p-2 md:ml-40 ">Search</button>
+             <input type="search" id="cityname" class="m-4 rounded-lg p-2" placeholder="Eg, Nagpur , Pune , Banglore" name="search" list="citys">
+             <datalist id="citys">
+              
+             </datalist>
+             <!-- <ul id="dropdown" class="absolute mt-2 mb-4 z-10 bg-red-700 border border-gray-300 rounded-lg hidden w-full max-h-60 overflow-y-auto"></ul> -->
+             <button type="submit" id="btn"  class=" bg-violet-600 fixed font-bold z-0 text-white text-xl w-1/2 text-center rounded-md ml-20 p-2 md:ml-40 ">Search</button>
+             
           </form>
           <p>--------------- OR ---------------</p>
             <button id="currentlocation" class="bg-stone-400 p-1 rounded-sm font-semibold mt-1 md:p-2">Use My Current Location</button>   
