--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
               
              </datalist>
              <!-- <ul id="dropdown" class="absolute mt-2 mb-4 z-10 bg-red-700 border border-gray-300 rounded-lg hidden w-full max-h-60 overflow-y-auto"></ul> -->
-             <button type="submit" id="btn"  class=" bg-violet-600 fixed font-bold z-0 text-white text-xl w-1/2 text-center rounded-md ml-20 p-2 md:ml-40 ">Search</button>
+             <button type="submit" id="btn"  class=" bg-violet-600 fixed font-bold  text-white text-xl w-1/2 text-center rounded-md ml-20 p-2 md:ml-40 ">Search</button>
              
           </form>
           <p>--------------- OR ---------------</p>
