--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,9 @@
         
 
    </main>
-
+<footer class="bg-gradient-to-r from-green-500  via-red-600 to-green-500 h-10">
+<h1 class="text-center font-semibold mt-8 ">Copywrite By @Gopal_Tayade_2024</h1>
+</footer>
    
   
    
