--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
 <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
 
-    <title>Document</title>
+    <title>Weather Forcast Application</title>
+    <link rel="icon" href="../public/images/weather-app.png" type="image/x-icon">
 </head>
 <body class="bg-slate-200 ">
 
