create a new folder

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Gopal Tayade">
      <meta name="info" content="wether forcast applicatio build using html css and javascript that provide the wether condition such as temprature , condition and last days information">
-    <link href="./output.css" rel="stylesheet">
+    <link href="./src/output.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
     crossorigin=""/>
@@ -15,7 +15,7 @@
    
 
     <title>Weather Forcast Application</title>
-    <link rel="icon" href="../public/images/weather-app.png" type="image/x-icon">
+    <link rel="icon" href="./public/images/weather-app.png" type="image/x-icon">
 </head>
 <body class="bg-slate-200 ">
 
@@ -74,7 +74,7 @@
                   <p id="humadity" class="font-semibold md:text-lg">Humadity:88%</p>
                </section>
                <section>
-                  <img id="image"  src="../public/images/sun-159378_640.webp"  width="100px" alt="wether image">
+                  <img id="image"  src="./public/images/sun-159378_640.webp"  width="100px" alt="wether image">
                   <p id="envcondition" class="-mt-5 ml-3">Condition</p>
                </section>
                
